<resources>

    <string name="app_name">TodoYou</string>

    <string name="add_todo">Add TODO</string>
    <string name="edit_todo">Edit TODO</string>
    <string name="view_todo">View TODO</string>

    <string name="create_tag">Create Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="view_tag">View Tags</string>

    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_tag">Choose Tag</string>
    <string name="add_record">Add record</string>

    <string name="empty_tag_list">You have no tags</string>
    <string name="empty_todo_list">You have no todos</string>

    <string name="create_todo_header">Create your ToDo!</string>
    <string name="create_todo_description">Input the values in the forms and press the button to create your ToDo!</string>
    <string name="edit_todo_header">Edit your ToDo!</string>
    <string name="edit_todo_description">Change the values here and confirm the changes to update your ToDo.</string>
    <string name="edit_tag_header">Edit your Tag!</string>
    <string name="edit_tag_description">Change the values here and confirm the changes to update your ToDo.</string>

    <string name="create_tag_header">Create a Tag!</string>
    <string name="create_tag_description">Input the values in the form and press the button to create your Tag!</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="description">Description: </string>
    <string name="until">Until: </string>

</resources>
