<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_tag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.base.CreateTagFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_tag_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="4"
        android:padding="30dp"
        android:text="@string/create_tag_header"
        android:textSize="30sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/create_tag_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="4"
        android:padding="30dp"
        android:text="@string/create_tag_description"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/tag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enter_tag">
    </EditText>

    <Button
        android:id="@+id/add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="@color/colorMainAccent"
        android:padding="15dp"
        android:text="@string/add_record" />

</LinearLayout>